chore: clean up sonarlint warnings